--- a/BOB/Mugwump solution by bob.ipynb
+++ b/BOB/Mugwump solution by bob.ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -87,24 +87,32 @@
       "['O', 'O', 'O', 'O', 'O']\n",
       "['O', 'O', 'O', 'O', 'O']\n",
       "['O', 'O', 'O', 'O', 'O']\n",
-      "Please input int (x,y) from 0 to 4: 1,1\n",
+      "\n",
+      "\n",
+      "Please input int (x,y) from 0 to 4: \n",
+      "1,1\n",
       "['O', 'O', 'O', 'O', 'O']\n",
       "['O', 'X', 'O', 'O', 'O']\n",
       "['O', 'O', 'O', 'O', 'O']\n",
       "['O', 'O', 'O', 'O', 'O']\n",
       "['O', 'O', 'O', 'O', 'O']\n",
-      "Distance to the right position is:  1.4142135623730951\n",
-      "Better luck next time\n",
-      "Please input int (x,y) from 0 to 4: 2,1\n",
+      "\n",
+      "\n",
+      "Distance to the right position is: \n",
+      " 2.0\n",
+      "Better luck next time \n",
+      "\n",
+      "Please input int (x,y) from 0 to 4: \n",
+      "1,3\n",
+      "Congrats \n",
+      "\n",
       "['O', 'O', 'O', 'O', 'O']\n",
-      "['O', 'X', 'O', 'O', 'O']\n",
-      "['O', 'X', 'O', 'O', 'O']\n",
+      "['O', 'X', 'O', 'A', 'O']\n",
       "['O', 'O', 'O', 'O', 'O']\n",
       "['O', 'O', 'O', 'O', 'O']\n",
-      "Distance to the right position is:  1.0\n",
-      "Better luck next time\n",
-      "Please input int (x,y) from 0 to 4: 2,2\n",
-      "Congrats\n"
+      "['O', 'O', 'O', 'O', 'O']\n",
+      "\n",
+      "\n"
      ]
     }
    ],
@@ -117,7 +125,7 @@
     "                ['O','O','O','O','O'],['O','O','O','O','O']]\n",
     "for i in test_initial:\n",
     "    print(i)\n",
-    "    \n",
+    "print('\\n')   \n",
     "    \n",
     "# Generate two random values from 0 to 4 and stored in x and y\n",
     "x = random.randint(0,5)\n",
@@ -127,22 +135,26 @@
     "\n",
     "# for loop to give five times try in total\n",
     "for num in range(5):\n",
-    "    x_1,y_1 = eval(input('Please input int (x,y) from 0 to 4: '))\n",
+    "    x_1,y_1 = eval(input('Please input int (x,y) from 0 to 4: \\n'))\n",
     "    \n",
     "# Check if input number is run out of boundary   \n",
     "    if x_1 >4 or x_1 <0:\n",
     "         if y_1 >4 or y_1<0:\n",
-    "            print('Please enter correct number')\n",
+    "            print('Please enter correct number \\n')\n",
     "            break\n",
     "\n",
     "# Check if the input number equals to the random x,y\n",
     "    elif x_1 == x and y_1 == y: \n",
-    "        print('Congrats')\n",
+    "        print('Congrats \\n')\n",
+    "        test_initial[x_1][y_1] = 'A'\n",
+    "        for num in test_initial:\n",
+    "            print(num)\n",
+    "        print('\\n')\n",
     "        break\n",
     "\n",
     "# Check if the input is equal to the previous value\n",
     "    elif test_initial[x_1][y_1] == 'X':\n",
-    "        print('Please try different num')\n",
+    "        print('Please try different num \\n')\n",
     "        continue\n",
     "        \n",
     "# Change the value to 'X' and calculate the distance to the result\n",
@@ -150,12 +162,41 @@
     "        test_initial[x_1][y_1] = 'X'\n",
     "        for j in test_initial:\n",
     "             print(j)\n",
+    "        print('\\n')\n",
     "        dis = math.sqrt((x_1-x)**2 + (y_1-y)**2)\n",
-    "        print('Distance to the right position is: ',dis)\n",
-    "        print('Better luck next time')\n",
+    "        print('Distance to the right position is: \\n',dis)\n",
+    "        print('Better luck next time \\n')\n",
     "   \n",
     "        "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
