--- a/Vani/my_test_nb.ipynb
+++ b/Vani/my_test_nb.ipynb
@@ -22,7 +22,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "x = =np.array([1,2,3])\n",
+    "y = "
+   ]
   }
  ],
  "metadata": {
