--- a/BOB/Mugwump solution by bob.ipynb
+++ b/BOB/Mugwump solution by bob.ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -90,68 +90,16 @@
       "\n",
       "\n",
       "Please input int (x,y) from 0 to 4: \n",
-      "4,0\n",
+      "1,1\n",
+      "['O', 'O', 'O', 'O', 'O']\n",
+      "['O', 'X', 'O', 'O', 'O']\n",
       "['O', 'O', 'O', 'O', 'O']\n",
       "['O', 'O', 'O', 'O', 'O']\n",
       "['O', 'O', 'O', 'O', 'O']\n",
-      "['O', 'O', 'O', 'O', 'O']\n",
-      "['X', 'O', 'O', 'O', 'O']\n",
       "\n",
       "\n",
       "Distance to the right position is: \n",
-      " 4.123105625617661\n",
-      "Better luck next time \n",
-      "\n",
-      "Please input int (x,y) from 0 to 4: \n",
-      "2,2\n",
-      "['O', 'O', 'O', 'O', 'O']\n",
-      "['O', 'O', 'O', 'O', 'O']\n",
-      "['O', 'O', 'X', 'O', 'O']\n",
-      "['O', 'O', 'O', 'O', 'O']\n",
-      "['X', 'O', 'O', 'O', 'O']\n",
-      "\n",
-      "\n",
-      "Distance to the right position is: \n",
-      " 3.605551275463989\n",
-      "Better luck next time \n",
-      "\n",
-      "Please input int (x,y) from 0 to 4: \n",
-      "1,4\n",
-      "['O', 'O', 'O', 'O', 'O']\n",
-      "['O', 'O', 'O', 'O', 'X']\n",
-      "['O', 'O', 'X', 'O', 'O']\n",
-      "['O', 'O', 'O', 'O', 'O']\n",
-      "['X', 'O', 'O', 'O', 'O']\n",
-      "\n",
-      "\n",
-      "Distance to the right position is: \n",
-      " 4.0\n",
-      "Better luck next time \n",
-      "\n",
-      "Please input int (x,y) from 0 to 4: \n",
-      "3,4\n",
-      "['O', 'O', 'O', 'O', 'O']\n",
-      "['O', 'O', 'O', 'O', 'X']\n",
-      "['O', 'O', 'X', 'O', 'O']\n",
-      "['O', 'O', 'O', 'O', 'X']\n",
-      "['X', 'O', 'O', 'O', 'O']\n",
-      "\n",
-      "\n",
-      "Distance to the right position is: \n",
-      " 2.0\n",
-      "Better luck next time \n",
-      "\n",
-      "Please input int (x,y) from 0 to 4: \n",
-      "3,2\n",
-      "['O', 'O', 'O', 'O', 'O']\n",
-      "['O', 'O', 'O', 'O', 'X']\n",
-      "['O', 'O', 'X', 'O', 'O']\n",
-      "['O', 'O', 'X', 'O', 'X']\n",
-      "['X', 'O', 'O', 'O', 'O']\n",
-      "\n",
-      "\n",
-      "Distance to the right position is: \n",
-      " 2.8284271247461903\n",
+      " 2.23606797749979\n",
       "Better luck next time \n",
       "\n"
      ]
@@ -217,6 +165,27 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "flag = True\n",
+    "times = 0\n",
+    "while flag:\n",
+    "    \n",
+    "    if \n",
+    "    elif\n",
+    "    \n",
+    "    \n",
+    "    times += 1\n",
+    "    if times >=5:\n",
+    "        flag = False\n",
+    "        \n",
+    "    "
+   ]
   },
   {
    "cell_type": "code",
