--- a/Sarita/Labs/my_new_file.ipynb
+++ b/Sarita/Labs/my_new_file.ipynb
@@ -2,25 +2,44 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1 2]\n",
-      "[[10 20 30]\n",
-      " [ 1  2  3]]\n"
+      "32\n"
      ]
     }
    ],
    "source": [
     "import numpy as np\n",
-    "v1 = np.array([1,2])\n",
-    "v2 = np.array([[10,20,30],[1,2,3]])\n",
-    "print(v1)\n",
-    "print(v2)"
+    "x=np.array([1,2,3])\n",
+    "y=np.array([4,5,6])\n",
+    "z=np.dot(x,y)\n",
+    "print(z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-3  6 -3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "x=np.array([1,2,3])\n",
+    "y=np.array([4,5,6])\n",
+    "z=np.cross(x,y)\n",
+    "print(z)"
    ]
   },
   {
