--- a/hieu/Lab 1.1.1 Vector & Matrix Operations .ipynb
+++ b/hieu/Lab 1.1.1 Vector & Matrix Operations .ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-06-27T03:58:34.200170Z",
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-06-27T04:56:56.317427Z",
@@ -55,32 +55,23 @@
     },
     "colab": {},
     "colab_type": "code",
-    "id": "rsOPN02pT3CG",
-    "scrolled": true
+    "id": "rsOPN02pT3CG"
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n"
+      "[-144  144]\n"
      ]
     }
    ],
    "source": [
-    "a = [-12, 16]\n",
-    "b = [12, 9]\n",
-    "c = np.dot(a,b)\n",
-    "\n",
-    "print(c)"
+    "a = np.array([-12, 16])\n",
+    "b = np.array([12, 9])\n",
+    "ab = np.array(a*b)\n",
+    "print(ab)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -106,23 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# To calculate this cross, use first colum from 2 matrix to get the first coulum in the new matrix c"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-06-27T04:56:59.994576Z",
@@ -137,31 +112,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[-3  6 -3]\n",
-      " [ 3 -6  3]]\n"
+      "4\n",
+      "[[-3 -3 -3]\n",
+      " [ 3  3  3]]\n"
      ]
     }
    ],
    "source": [
     "x = np.array([[1,2,3], [4,5,6]])\n",
-    "y = np.array([[4,5,6], [1,2,3]])\n",
-    "c = np.cross(x,y)\n",
-    "print(c)"
+    "y = np.array([[4,5,6], [1,2,3]])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -179,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 0,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-06-27T04:57:06.480263Z",
@@ -189,36 +149,12 @@
     "colab_type": "code",
     "id": "WnDQY9MyT3CM"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 5 12]\n",
-      " [21 32]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = np.array([[1,2],[3,4]])\n",
     "b = np.array([[5,6],[7,8]])\n",
-    "c = np.multiply(a,b)\n",
-    "print(c)"
+    "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -234,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 0,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-06-27T04:57:13.225605Z",
@@ -244,17 +180,7 @@
     "colab_type": "code",
     "id": "ulBVhGDET3CP"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[17, 15, 4]\n",
-      "[10, 12, 9]\n",
-      "[11, 13, 18]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Program to add two matrices using nested loop\n",
     "\n",
@@ -268,22 +194,8 @@
     "\n",
     "result = [[0,0,0],\n",
     "         [0,0,0],\n",
-    "         [0,0,0]]\n",
-    "\n",
-    "for i in range(len(X)):\n",
-    "    for j in range(len(Y[0])):\n",
-    "        result[i][j] = X[i][j] + Y[i][j]\n",
-    "for row in result:\n",
-    "    print(row)\n",
-    "    "
+    "         [0,0,0]]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -303,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 0,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-06-27T04:57:19.425749Z",
@@ -313,17 +225,7 @@
     "colab_type": "code",
     "id": "2cwCXjx_T3CT"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[114, 160, 60, 27]\n",
-      "[74, 97, 73, 14]\n",
-      "[119, 157, 112, 23]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Program to multiply two matrices using nested loops\n",
     "\n",
@@ -340,23 +242,8 @@
     "# result is 3x4\n",
     "result = [[0,0,0,0],\n",
     "         [0,0,0,0],\n",
-    "         [0,0,0,0]]\n",
-    "\n",
-    "for i in range(len(X)):\n",
-    "    for j in range(len(Y[0])):\n",
-    "        for k in range(len(Y)):\n",
-    "            result[i][j] += X[i][k] * Y[k][j]\n",
-    "            \n",
-    "for element in result:\n",
-    "    print(element)"
+    "         [0,0,0,0]]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -377,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 0,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-06-27T04:58:00.140277Z",
@@ -387,27 +274,10 @@
     "colab_type": "code",
     "id": "7SpAPh-5T3CW"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "17.999999999999996\n"
-     ]
-    }
-   ],
-   "source": [
-    "matrix = [[-2,2,-3],[-1,1,3],[2,0,-1]]\n",
-    "result = np.linalg.det(matrix)\n",
-    "print(result)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "matrix = [[-2,2,-3],[-1,1,3],[2,0,-1]]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -432,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 0,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-06-27T04:58:33.615832Z",
@@ -442,36 +312,10 @@
     "colab_type": "code",
     "id": "qGxUYlMWT3Cb"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[-2.   1. ]\n",
-      " [ 1.5 -0.5]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from numpy.linalg import inv\n",
-    "a = np.array([[1., 2.], [3., 4.]])\n",
-    "res = inv(a)\n",
-    "print(res)"
+    "a = np.array([[1., 2.], [3., 4.]])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
