--- a/hieu/sqlite3files/DSIA_lab2_1_3.ipynb
+++ b/hieu/sqlite3files/DSIA_lab2_1_3.ipynb
@@ -1741,7 +1741,7 @@
     "id": "wmw7wdLxhEEn"
    },
    "source": [
-    "#### 4. Save these two dataframes as a table in sqlite"
+    "#### 4. Start again Save these two dataframes as a table in sqlite"
    ]
   },
   {
@@ -1790,7 +1790,15 @@
     "\n",
     "#('CREATE TABLE orders_break_down (order_id INTEGER FOREIGN KEY, product_name TEXT, discount INTEGER, sales INTEGER, quantity INTEGER, category TEXT);')\n",
     "\n",
-    "conn.commit()"
+    "conn.commit()\n",
+    "\n",
+    "-------\n",
+    "# Establishing Local DB connection\n",
+    "db_connection = sqlite3.connect('../../DATA/eshop.db.sqlite')\n",
+    "\n",
+    "## Reading out DataFrames as SQL Table\n",
+    "orders.to_sql(name = 'orders', con = db_connection, if_exists = 'replace', index = False)\n",
+    "orders_break_down.to_sql(name = 'orders_break_down', con = db_connection, if_exists = 'replace', index = False)"
    ]
   },
   {
@@ -1801,7 +1809,9 @@
    "source": [
     "c.execute('CREATE TABLE orders_break_down (order_id INTEGER, product_name TEXT, discount INTEGER, sales INTEGER, quantity INTEGER, category TEXT);')\n",
     "conn.commit()\n",
-    "#also had to remove  FOREIGN KEY REFERENCES orders(order_id)"
+    "#also had to remove  FOREIGN KEY REFERENCES orders(order_id)\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -1883,7 +1893,23 @@
    ],
    "source": [
     "# Select Number of Orders for Each Customer\n",
-    "c.execute('Select * from orders group by customer_name;').fetchall()\n"
+    "c.execute('Select * from orders group by customer_name;').fetchall()\n",
+    "\n",
+    "-----\n",
+    "# Select Number of Orders for Each Customer\n",
+    "\n",
+    "sql_string = '''\n",
+    "    SELECT \n",
+    "        customer_name, \n",
+    "        COUNT(DISTINCT orders.order_id) AS Count \n",
+    "    FROM orders \n",
+    "    JOIN orders_break_down ON orders_break_down.order_id = orders.order_id\n",
+    "    GROUP BY customer_name ORDER BY Count DESC\n",
+    "'''\n",
+    "\n",
+    "customers = sql.read_sql(sql_string, con = db_connection)\n",
+    "\n",
+    "customers.head()\n"
    ]
   },
   {
@@ -1911,7 +1937,21 @@
    },
    "outputs": [],
    "source": [
-    "# Select Number of Customers for Each Country"
+    "# Select Number of Customers for Each Country\n",
+    "\n",
+    "---\n",
+    "# Select Number of Customers for Each Country\n",
+    "\n",
+    "sql_string = '''\n",
+    "    SELECT \n",
+    "        country, \n",
+    "        COUNT(DISTINCT customer_name) AS Count \n",
+    "    FROM orders \n",
+    "    GROUP BY country \n",
+    "    ORDER BY Count DESC\n",
+    "'''\n",
+    "\n",
+    "customers = sql.read_sql(sql_string, con = db_connection)"
    ]
   },
   {
@@ -1939,7 +1979,21 @@
    },
    "outputs": [],
    "source": [
-    "#  Select discount, sales, quantity for Each Order from orders_break_down Table"
+    "#  Select discount, sales, quantity for Each Order from orders_break_down Table\n",
+    "\n",
+    "---\n",
+    "# Select discount, sales, quantity for Each Order from orders_break_down Table\n",
+    "\n",
+    "sql_string = '''\n",
+    "    SELECT \n",
+    "        discount\n",
+    "        , sales\n",
+    "        , quantity \n",
+    "    FROM orders_break_down\n",
+    "'''\n",
+    "\n",
+    "customers = sql.read_sql(sql_string, con = db_connection)\n",
+    "customers.head()"
    ]
   },
   {
@@ -1969,7 +2023,23 @@
    },
    "outputs": [],
    "source": [
-    "# Select discount, sales, quantity, total price for Each Order from orders_break_down Table"
+    "# Select discount, sales, quantity, total price for Each Order from orders_break_down Table\n",
+    "\n",
+    "---\n",
+    "# Select discount, sales, quantity, total price for Each Order from orders_break_down Table\n",
+    "\n",
+    "sql_string = '''\n",
+    "    SELECT \n",
+    "        discount\n",
+    "        , sales\n",
+    "        , quantity\n",
+    "        , (sales * quantity - discount) AS total_price \n",
+    "    FROM orders_break_down\n",
+    "    ORDER BY total_price DESC\n",
+    "'''\n",
+    "\n",
+    "customers = sql.read_sql(sql_string, con = db_connection)\n",
+    "customers.head()"
    ]
   },
   {
@@ -2001,7 +2071,22 @@
    },
    "outputs": [],
    "source": [
-    "# Select All Orders from orders_break_down Table Where Total Price Greater Than 100"
+    "# Select All Orders from orders_break_down Table Where Total Price Greater Than 100\n",
+    "\n",
+    "# Select All Orders from orders_break_down Table Where Total Price Greater Than 100\n",
+    "\n",
+    "sql_string = '''\n",
+    "    SELECT \n",
+    "        *\n",
+    "        , (sales * quantity - discount) AS total_price\n",
+    "    FROM orders_break_down \n",
+    "    WHERE sales * quantity - discount > 100\n",
+    "    ORDER BY total_price ASC\n",
+    "\n",
+    "'''\n",
+    "\n",
+    "customers = sql.read_sql(sql_string, con = db_connection)\n",
+    "customers.head()"
    ]
   },
   {
@@ -2028,7 +2113,20 @@
    },
    "outputs": [],
    "source": [
-    "# Select All Customer And The Product They Have Bought"
+    "# Select All Customer And The Product They Have Bought\n",
+    "\n",
+    "# Select All Customer And The Product They Have Bought\n",
+    "\n",
+    "sql_string = '''\n",
+    "    SELECT \n",
+    "        orders.order_id\n",
+    "        , orders.customer_name\n",
+    "        , orders_break_down.product_name\n",
+    "    FROM orders\n",
+    "    JOIN orders_break_down ON orders.order_id = orders_break_down.order_id\n",
+    "''' \n",
+    "customers = sql.read_sql(sql_string, con = db_connection)\n",
+    "customers.head()"
    ]
   },
   {
@@ -2060,7 +2158,24 @@
    },
    "outputs": [],
    "source": [
-    "# Select Number of 'Furniture' Orders For Each Country"
+    "# Select Number of 'Furniture' Orders For Each Country\n",
+    "\n",
+    "# Select Number of 'Furniture' Orders For Each Country\n",
+    "\n",
+    "sql_string = '''\n",
+    "    SELECT \n",
+    "        orders.country\n",
+    "        , COUNT(orders_break_down.category) AS Count           \n",
+    "    FROM orders\n",
+    "    JOIN orders_break_down\n",
+    "    ON orders.order_id = orders_break_down.order_id\n",
+    "    WHERE orders_break_down.category = 'Furniture'\n",
+    "    GROUP BY orders.country\n",
+    "'''\n",
+    "\n",
+    "order_list = sql.read_sql(sql_string, con = db_connection)\n",
+    "\n",
+    "order_list.head()"
    ]
   },
   {
@@ -2088,7 +2203,26 @@
    },
    "outputs": [],
    "source": [
-    "# Select Number of 'Furniture' Orders For The Country Denmark"
+    "# Select Number of 'Furniture' Orders For The Country Denmark\n",
+    "\n",
+    "\n",
+    "\n",
+    "---\n",
+    "# Select Number of 'Furniture' Orders For The Country Denmark\n",
+    "\n",
+    "sql_string = '''\n",
+    "    SELECT \n",
+    "        *       \n",
+    "    FROM orders\n",
+    "    JOIN orders_break_down\n",
+    "    ON orders.order_id = orders_break_down.order_id\n",
+    "    WHERE orders_break_down.category = 'Furniture'\n",
+    "        AND orders.country = 'Denmark'\n",
+    "'''\n",
+    "\n",
+    "order_list = sql.read_sql(sql_string, con = db_connection)\n",
+    "\n",
+    "order_list.head()"
    ]
   },
   {
@@ -2116,7 +2250,24 @@
    },
    "outputs": [],
    "source": [
-    "# Select Total Sales With Discount and Without Discount for Each Country"
+    "# Select Total Sales With Discount and Without Discount for Each Country\n",
+    "\n",
+    "---\n",
+    "# Select Total Sales With Discount and Without Discount for Each Country\n",
+    "\n",
+    "sql_string = '''\n",
+    "    SELECT\n",
+    "        orders.country\n",
+    "        , SUM(CASE WHEN discount == 0 THEN sales ELSE 0 END) AS discount_sales\n",
+    "        , SUM(CASE WHEN discount > 0 THEN sales ELSE 0 END) AS non_discount_sales       \n",
+    "    FROM orders\n",
+    "    JOIN orders_break_down ON orders.order_id = orders_break_down.order_id\n",
+    "    GROUP BY orders.country\n",
+    "'''\n",
+    "\n",
+    "order_list = sql.read_sql(sql_string, con = db_connection)\n",
+    "\n",
+    "order_list.head()"
    ]
   },
   {
@@ -2144,7 +2295,24 @@
    },
    "outputs": [],
    "source": [
-    "# Select Total Quantity, Total Sales for Each Country"
+    "# Select Total Quantity, Total Sales for Each Country\n",
+    "\n",
+    "---\n",
+    "# Select Total Quantity, Total Sales for Each Country\n",
+    "\n",
+    "sql_string = '''\n",
+    "    SELECT\n",
+    "        orders.country\n",
+    "        , SUM(sales) AS total_sales\n",
+    "        , SUM(quantity) AS total_quantity       \n",
+    "    FROM orders\n",
+    "    JOIN orders_break_down ON orders.order_id = orders_break_down.order_id\n",
+    "    GROUP BY orders.country\n",
+    "'''\n",
+    "\n",
+    "order_list = sql.read_sql(sql_string, con = db_connection)\n",
+    "\n",
+    "order_list.head()"
    ]
   },
   {
@@ -2176,7 +2344,37 @@
    },
    "outputs": [],
    "source": [
-    "# Select Top 3 Country Based on Sales"
+    "# Select Top 3 Country Based on Sales\n",
+    "\n",
+    "---# Select Top 3 Country Based on Sales\n",
+    "\n",
+    "sql_string = '''\n",
+    "    SELECT\n",
+    "        orders.country\n",
+    "        , SUM(sales) AS total_sales\n",
+    "        , SUM(quantity) AS total_quantity       \n",
+    "    FROM orders\n",
+    "    JOIN orders_break_down ON orders.order_id = orders_break_down.order_id\n",
+    "    GROUP BY orders.country\n",
+    "    ORDER BY total_sales DESC LIMIT 3\n",
+    "'''\n",
+    "\n",
+    "order_list = sql.read_sql(sql_string, con = db_connection)\n",
+    "\n",
+    "order_list.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "---\n",
+    "\n",
+    "order_list.sort_values(by='total_sales', ascending=False).head(3)"
    ]
   },
   {
@@ -2204,7 +2402,24 @@
    },
    "outputs": [],
    "source": [
-    "# Select Bottom 3 Country Based On Quantities"
+    "# Select Bottom 3 Country Based On Quantities\n",
+    "\n",
+    "# Select Bottom 3 Country Based On Quantities\n",
+    "\n",
+    "sql_string = '''\n",
+    "    SELECT\n",
+    "        orders.country\n",
+    "        , SUM(sales) AS total_sales\n",
+    "        , SUM(quantity) AS total_quantity       \n",
+    "    FROM orders\n",
+    "    JOIN orders_break_down ON orders.order_id = orders_break_down.order_id\n",
+    "    GROUP BY orders.country\n",
+    "    ORDER BY total_quantity ASC LIMIT 3\n",
+    "'''\n",
+    "\n",
+    "order_list = sql.read_sql(sql_string, con = db_connection)\n",
+    "\n",
+    "order_list.head()"
    ]
   },
   {
@@ -2236,7 +2451,25 @@
    },
    "outputs": [],
    "source": [
-    "# Select Average Sales By Categroy For The Country 'France'"
+    "# Select Average Sales By Categroy For The Country 'France'\n",
+    "\n",
+    "# Select Average Sales By Categroy For The Country 'France'\n",
+    "\n",
+    "sql_string = '''\n",
+    "    SELECT\n",
+    "        orders.country\n",
+    "        , orders_break_down.category\n",
+    "        , AVG(sales) AS avg_sales       \n",
+    "    FROM orders\n",
+    "    JOIN orders_break_down ON orders.order_id = orders_break_down.order_id\n",
+    "    WHERE orders.country = 'France'\n",
+    "    GROUP BY orders.country, orders_break_down.category\n",
+    "    ORDER BY avg_sales DESC\n",
+    "'''\n",
+    "\n",
+    "order_list = sql.read_sql(sql_string, con = db_connection)\n",
+    "\n",
+    "order_list.head(100)"
    ]
   },
   {
@@ -2264,7 +2497,24 @@
    },
    "outputs": [],
    "source": [
-    "# Select Country, Category and Total Sales Where Average Total Sales is The Highest"
+    "# Select Country, Category and Total Sales Where Average Total Sales is The Highest\n",
+    "\n",
+    "# Select Country, Category and Total Sales Where Average Total Sales is The Highest\n",
+    "\n",
+    "sql_string = '''\n",
+    "    SELECT\n",
+    "        orders.country\n",
+    "        , orders_break_down.category\n",
+    "        , AVG(sales) AS total_sales       \n",
+    "    FROM orders\n",
+    "    JOIN orders_break_down ON orders.order_id = orders_break_down.order_id\n",
+    "    GROUP BY orders.country, orders_break_down.category\n",
+    "    ORDER BY total_sales DESC LIMIT 1\n",
+    "'''\n",
+    "\n",
+    "order_list = sql.read_sql(sql_string, con = db_connection)\n",
+    "\n",
+    "order_list.head()"
    ]
   },
   {
