--- a/hieu/lab2/DSIA_Lab214-HieuMongoDB.ipynb
+++ b/hieu/lab2/DSIA_Lab214-HieuMongoDB.ipynb
@@ -33,16 +33,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting pymongo\n",
+      "  Using cached https://files.pythonhosted.org/packages/0c/39/0ac214d6b0b716ab9e47e72ddb9c7eb6d0d2599d066200eaeba72bebee9a/pymongo-3.8.0-cp36-cp36m-macosx_10_9_x86_64.whl\n",
+      "Installing collected packages: pymongo\n",
+      "Successfully installed pymongo-3.8.0\n"
+     ]
+    }
+   ],
    "source": [
     "!pip install --ignore-installed pymongo"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -85,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -98,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -123,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "colab": {},
     "colab_type": "code",
