--- a/BOB/LAB2/DSIA Lab 2.1.5.ipynb
+++ b/BOB/LAB2/DSIA Lab 2.1.5.ipynb
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -101,14 +101,14 @@
    },
    "outputs": [],
    "source": [
-    "from neo4j.v1 import GraphDatabase\n",
+    "from neo4j import GraphDatabase\n",
     "\n",
     "uri = \"bolt://localhost:7687\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -175,7 +175,6 @@
     "    for record in tx.run(\"MATCH (a:Person)-[:ACTED_IN]->(anyMovies) \"\n",
     "                         \"WHERE a.name = {name} \"\n",
     "                         \"RETURN anyMovies\", name = name):\n",
-    "        tx.closed()\n",
     "        print(record[\"anyMovies\"])"
    ]
   },
@@ -198,16 +197,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 19,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "eQTlrnveFfjy"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<Node id=144 labels={'Movie'} properties={'title': 'Apollo 13', 'tagline': 'Houston, we have a problem.', 'released': 1995}>\n",
+      "<Node id=67 labels={'Movie'} properties={'title': \"You've Got Mail\", 'tagline': 'At odds in life... in love on-line.', 'released': 1998}>\n",
+      "<Node id=162 labels={'Movie'} properties={'title': 'A League of Their Own', 'tagline': 'Once in a lifetime you get a chance to do something different.', 'released': 1992}>\n",
+      "<Node id=78 labels={'Movie'} properties={'title': 'Joe Versus the Volcano', 'tagline': 'A story of love, lava and burning desire.', 'released': 1990}>\n",
+      "<Node id=85 labels={'Movie'} properties={'title': 'That Thing You Do', 'tagline': 'In every life there comes a time when that thing you dream becomes that thing you do', 'released': 1996}>\n",
+      "<Node id=111 labels={'Movie'} properties={'title': 'The Da Vinci Code', 'tagline': 'Break The Codes', 'released': 2006}>\n",
+      "<Node id=105 labels={'Movie'} properties={'title': 'Cloud Atlas', 'tagline': 'Everything is connected', 'released': 2012}>\n",
+      "<Node id=150 labels={'Movie'} properties={'title': 'Cast Away', 'tagline': 'At the edge of the world, his journey begins.', 'released': 2000}>\n",
+      "<Node id=130 labels={'Movie'} properties={'title': 'The Green Mile', 'tagline': \"Walk a mile you'll never forget.\", 'released': 1999}>\n",
+      "<Node id=73 labels={'Movie'} properties={'title': 'Sleepless in Seattle', 'tagline': 'What if someone you never met, someone you never saw, someone you never knew was the only someone for you?', 'released': 1993}>\n",
+      "<Node id=161 labels={'Movie'} properties={'title': 'The Polar Express', 'tagline': 'This Holiday Season… Believe', 'released': 2004}>\n",
+      "<Node id=159 labels={'Movie'} properties={'title': \"Charlie Wilson's War\", 'tagline': \"A stiff drink. A little mascara. A lot of nerve. Who said they couldn't bring down the Soviet empire.\", 'released': 2007}>\n"
+     ]
+    }
+   ],
    "source": [
     "with driver.session() as session:\n",
-    "    \n",
     "    session.read_transaction(print_movies_by, 'Tom Hanks')\n",
     "    "
    ]
@@ -265,33 +282,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "4QLuGyDEFfj3"
    },
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-14-dd55b948ab41>, line 6)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-14-dd55b948ab41>\"\u001b[0;36m, line \u001b[0;32m6\u001b[0m\n\u001b[0;31m    def print_friends_of(tx, name):\u001b[0m\n\u001b[0m      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from neo4j import GraphDatabase\n",
     "\n",
     "uri = \"bolt://localhost:7687\"\n",
-    "driver = GraphDatabase.driver(uri, auth=(\"neo4j\", '0807')\n",
+    "driver = GraphDatabase.driver(uri, auth=(\"neo4j\",\"0807\"))\n",
     "\n",
     "def print_friends_of(tx, name):\n",
     "    for record in tx.run(\"MATCH (a:Person)-[:KNOWS]->(f) \"\n",
     "                         \"WHERE a.name = {name} \"\n",
     "                         \"RETURN f.name\", name=name):\n",
-    "    print(record[\"f.name\"])\n",
+    "        print(record[\"f.name\"])\n",
     "\n",
     "with driver.session() as session:\n",
     "    session.read_transaction(print_friends_of, \"Alice\")"
@@ -299,12 +307,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "kaXi-OExFfj6"
    },
+   "outputs": [],
+   "source": [
+    "from neo4j import GraphDatabase\n",
+    "\n",
+    "uri = \"bolt://localhost:7687\"\n",
+    "driver = GraphDatabase.driver(uri, auth=(\"neo4j\",\"0807\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def print_friends_of(tx, name):\n",
+    "    for record in tx.run(\"MATCH (a:Person)-[:KNOWS]->(f) \"\n",
+    "                         \"WHERE a.name = {name} \"\n",
+    "                         \"RETURN f.name\", name=name):\n",
+    "        print(record[\"f.name\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with driver.session() as session:\n",
+    "    session.read_transaction(print_friends_of, \"Alice\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   },
