--- a/Weina/LABS 2/DSIA Lab 2.1.4.ipynb
+++ b/Weina/LABS 2/DSIA Lab 2.1.4.ipynb
@@ -78,6 +78,59 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# import pymongo \n",
+    "connection = pymongo.MongoClient(\"mongodb://localhost\") "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db = connection.school"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "students = db.students\n",
+    "cursor = students.find()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for doc in cursor:\n",
+    "    scores = doc[\"scores\"] \n",
+    "    , minhs = 101\n",
+    "    for entry in scores:\n",
+    "        if entry[\"type\"] == \"homework\": \n",
+    "            if entry[\"score\"] < minhs: \n",
+    "                minhs = entry[\"score\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(client.list_database_names())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Check the type and exist of MongoClient db\n",
     "print(type(client))\n",
     "print(client)"
@@ -113,7 +166,7 @@
    "outputs": [],
    "source": [
     "# Run drop-table-of-'people'\n",
-    "collection.drop\n",
+    "collection.drop()\n",
     "\n",
     "# Q: Drop all the clients in the database is completed"
    ]
@@ -183,6 +236,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mydb_2 = client[\"mydatabase_2\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -221,7 +283,8 @@
    "source": [
     "# Create list to the new created \"mydatabase\"\n",
     "\n",
-    "check_list = {\"admin\", \"config\", \"local\"}"
+    "check_list = [\"admin\", \"config\", \"local\"]\n",
+    "print(type(check_list))"
    ]
   },
   {
