--- a/hieu/Lab2_Hieu/DSIA Lab 2.2.1_HieuDone.ipynb
+++ b/hieu/Lab2_Hieu/DSIA Lab 2.2.1_HieuDone.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -100,14 +100,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "_I6hU3-AGtjA"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<Response [200]>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(response)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -121,14 +131,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "2XZ-ygFkGtjH"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'lat': -33.87, 'lon': 151.21}\n"
+     ]
+    }
+   ],
+   "source": [
+    "parameters = {'lat': -33.87,'lon':151.21}\n",
+    "print(parameters)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -142,14 +163,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "ZJMngO5IGtjL"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "response = requests.get(\"http://api.open-notify.org/iss-pass.json\", params=parameters)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -163,14 +186,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "6rsz7gwbGtjP"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Server': 'nginx/1.10.3', 'Date': 'Tue, 16 Jul 2019 06:56:35 GMT', 'Content-Type': 'application/json', 'Content-Length': '521', 'Connection': 'keep-alive', 'Via': '1.1 vegur'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(response.headers)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -184,14 +217,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "HbxepzDZGtjS"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b'{\\n  \"message\": \"success\", \\n  \"request\": {\\n    \"altitude\": 100, \\n    \"datetime\": 1563260124, \\n    \"latitude\": -33.87, \\n    \"longitude\": 151.21, \\n    \"passes\": 5\\n  }, \\n  \"response\": [\\n    {\\n      \"duration\": 401, \\n      \"risetime\": 1563265155\\n    }, \\n    {\\n      \"duration\": 605, \\n      \"risetime\": 1563313443\\n    }, \\n    {\\n      \"duration\": 631, \\n      \"risetime\": 1563319223\\n    }, \\n    {\\n      \"duration\": 456, \\n      \"risetime\": 1563325167\\n    }, \\n    {\\n      \"duration\": 342, \\n      \"risetime\": 1563331128\\n    }\\n  ]\\n}\\n'\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(response.content)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -205,14 +248,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "k8AMo0yWGtjV"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'bytes'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(response.content))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -226,14 +279,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "nxWxxLI7GtjX"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "application/json\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(response.headers[\"content-type\"])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -247,14 +310,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "nGVtgDaqGtja"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'message': 'success', 'request': {'altitude': 100, 'datetime': 1563260124, 'latitude': -33.87, 'longitude': 151.21, 'passes': 5}, 'response': [{'duration': 401, 'risetime': 1563265155}, {'duration': 605, 'risetime': 1563313443}, {'duration': 631, 'risetime': 1563319223}, {'duration': 456, 'risetime': 1563325167}, {'duration': 342, 'risetime': 1563331128}]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(response.json())\n",
+    "\n",
+    "# answer:\n",
+    "# overheads = response.json()\n",
+    "# print(overheads)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -268,14 +345,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "JBS4nRmSGtjd"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'dict'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(response.json()))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -289,14 +376,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "0u8LZg4dGtjh"
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'duration': 401, 'risetime': 1563265155}, {'duration': 605, 'risetime': 1563313443}, {'duration': 631, 'risetime': 1563319223}, {'duration': 456, 'risetime': 1563325167}, {'duration': 342, 'risetime': 1563331128}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = response.json()\n",
+    "response_val = data['response']\n",
+    "print(response_val)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -310,14 +405,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "nXqJ8_F2Gtjj"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1563265155, 1563313443, 1563319223, 1563325167, 1563331128]\n"
+     ]
+    }
+   ],
+   "source": [
+    "srisetimes = [data['risetime'] for data in response_val]\n",
+    "print(srisetimes)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -335,14 +441,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "8rzyAcLTGtjm"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[datetime.datetime(2019, 7, 16, 18, 19, 15), datetime.datetime(2019, 7, 17, 7, 44, 3), datetime.datetime(2019, 7, 17, 9, 20, 23), datetime.datetime(2019, 7, 17, 10, 59, 27), datetime.datetime(2019, 7, 17, 12, 38, 48)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "risetimes = [datetime.fromtimestamp(data['risetime']) for data in response_val]\n",
+    "print(risetimes)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -369,14 +486,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "AkBE76VqGtjo"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16/07/19 06:19\n",
+      "17/07/19 07:44\n",
+      "17/07/19 09:20\n",
+      "17/07/19 10:59\n",
+      "17/07/19 12:38\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in risetimes:\n",
+    "    print(i.strftime('%d/%m/%y %I:%M'))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -390,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -413,14 +545,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "Oqx5L19_Gtj1"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'people': [{'craft': 'ISS', 'name': 'Alexey Ovchinin'}, {'craft': 'ISS', 'name': 'Nick Hague'}, {'craft': 'ISS', 'name': 'Christina Koch'}], 'number': 3, 'message': 'success'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(response.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "['Alexey Ovchinin', 'Nick Hague', 'Christina Koch']\n"
+     ]
+    }
+   ],
+   "source": [
+    "number = astro['number']\n",
+    "print(number)\n",
+    "\n",
+    "astro = response.json()\n",
+    "people = astro['people']\n",
+    "name = [npeople['name'] for npeople in people]\n",
+    "print(name)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -444,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -452,11 +618,18 @@
    },
    "outputs": [],
    "source": [
-    "#ANSWER:\n",
+    "#ANSWER: Revise ask question\n",
     "def handleResponse(response, verbose = False):\n",
-    "    '''\n",
-    "    Returns Boolean Value, Status Code, \n",
-    "    '''\n",
+    "    if response.status_code == 200:\n",
+    "        print('Status is 200')\n",
+    "        verbose = False\n",
+    "        #return verbose\n",
+    "    else:\n",
+    "        print('Status = ' +str(response))\n",
+    "        verbose = True\n",
+    "        #return verbose\n",
+    "    return(verbose,response.status_code)\n",
+    "        \n",
     "  # if Status Code is 200 return false, and status code\n",
     "  # Otherwise Return True and Status Code"
    ]
@@ -473,14 +646,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "GYT1LAb8Gtj6"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Status is 200\n",
+      "Status = <Response [400]>\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "\n",
     "response = requests.get(\"http://api.open-notify.org/astros.json\")\n",
     "if handleResponse(response)[0]:\n",
     "    print('API call failed. Resolve issue before continuing!')\n",
@@ -574,7 +767,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
