--- a/hieu/Lab3_Hieu/DSIA Lab 3.1.2Hieu.ipynb
+++ b/hieu/Lab3_Hieu/DSIA Lab 3.1.2Hieu.ipynb
@@ -482,15 +482,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "l7w1tRLxN82X"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    0.24\n",
+       "1    0.22\n",
+       "2    0.22\n",
+       "3    0.24\n",
+       "4    0.24\n",
+       "5    0.24\n",
+       "Name: temp, dtype: float64"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#ANSWER\n"
+    "#ANSWER\n",
+    "bikes.loc[0:5,'temp']\n",
+    "# bikes.columns"
    ]
   },
   {
@@ -519,7 +538,7 @@
    },
    "outputs": [],
    "source": [
-    "#ANSWER"
+    "#ANSWER current"
    ]
   },
   {
